# localflow

./: .gitignore  ANLEITUNG.txt  Install.command  README.md  Start.command  keytest.py  pyproject.toml
localflow/: __init__.py  __main__.py  app.py  asr.py  audio.py  cleanup.py  command_mode.py  config.defaults.yaml  config.py  context.py  contracts.py  dictionary.py  hotkey.py  inject.py  overlay.py  profiles.py  streaming.py  tray.py  vad.py
tests/: conftest.py  test_app.py  test_asr.py  test_audio.py  test_cleanup.py  test_command_mode.py  test_config.py  test_context.py  test_dictionary.py  test_hotkey.py  test_inject.py  test_overlay.py  test_profiles.py  test_streaming.py  test_tray.py  test_vad.py
